// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema integrity validation > returns clean data for valid schemas 1`] = `
{
  "data": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "children": [
          "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
        ],
        "inputs": {},
        "type": "section",
      },
      "c1ab14a4-41db-4531-9a58-4825a9ef6d26": {
        "inputs": {
          "label": "test",
        },
        "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "type": "text",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "success": true,
}
`;

exports[`schema integrity validation > returns the validated schema 1`] = `
{
  "data": {
    "entities": {
      "c1ab14a4-41db-4531-9a58-4825a9ef6d26": {
        "inputs": {},
        "type": "text",
      },
    },
    "root": [
      "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
    ],
  },
  "success": true,
}
`;

exports[`schema integrity validation > throws for invalid children ids 1`] = `"The entity id '1' is invalid."`;

exports[`schema integrity validation > throws for invalid parent id 1`] = `"The entity id '1' is invalid."`;

exports[`schema integrity validation > throws for invalid root ids 1`] = `"The entity id '1' is invalid."`;

exports[`schema validation > validates inputs with their validators 1`] = `
{
  "reason": {
    "code": "InvalidEntitiesInputs",
    "payload": {
      "entitiesInputsErrors": {
        "4b9ed44b-0e4d-41e9-ad73-1ee70e8fefcb": {
          "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
        },
        "c1ab14a4-41db-4531-9a58-4825a9ef6d26": {
          "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
        },
      },
    },
  },
  "success": false,
}
`;

exports[`schema validation > validates inputs with their validators 2`] = `
{
  "entitiesInputsErrors": {
    "4b9ed44b-0e4d-41e9-ad73-1ee70e8fefcb": {
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    },
    "c1ab14a4-41db-4531-9a58-4825a9ef6d26": {
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    },
  },
}
`;
